# src/routes/blogRoutes.ts
@@ -9,8 +9,8 @@ const router = Router()
 router.post('/blogs',checkAuthenticated,checkAdmin,upload.single('image'),createPost)
 router.get('/blogs/:id',getPost)
 router.get('/blogs',getAllPost)
-router.patch('/blogs/:id', updatePost)
-router.delete('/blogs/:id',deletePost)
+router.patch('/blogs/:id',checkAuthenticated,checkAdmin,updatePost)
+router.delete('/blogs/:id',checkAuthenticated,checkAdmin,deletePost)
 // router.post("/blogs/:id/likes",createNewLike)
 router.post("/blogs/:id/likes",Likes);
 
